--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                 <div>
                 
                 <br><br> BIODATA DIRI :
-                <p>Tempat & Tanggal lahir : Tegal, 10 April 2005</p>
-                <p>Umur : 17 tahun</p>
-                <p>Kelas : XI 3</p>
+                <p>Tempat & Tanggal lahir : Tegal, 10 April 2007</p>
+                <p>Umur : 15 tahun</p>
+                <p>Kelas : X 3</p>
                 <p>Nama Sekolah : SMA NEGERI 1 TEGAL</p>
                 <p>Jenis Kelamin : Laki laki</p>
                 <p>Agama : Islam</p>
@@ -107,6 +107,7 @@
                     <br><br> KEAHLIAN :
                     <p>- Editing video</p>
                     <p>- Design grafis</p>
+                    <p>- Ngoding</p>
                     
                 </div>
 
