--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         </div>
 
         <div class="judul">
-            <span>Halo, saya Ryandi sugiarto jati</span>
+            <span>Halo, saya Ryandi Sugiarto Jati</span>
             <b class="skill">Website Portofolio saya</b>
 
 
-            <p>Nama Saya Ryandi Sugiarto Jati biasa dipanggil dengan nama Ryan, Siswa SMA yang mempunyai Cukup Potensi dibidang Biologi. Saya juga memiliki potensi yang cukup di bidang olahraga yaitu badminton. Tujuan saya masuk di smansa yaitu untuk mengejar nilai akademik supaya saya bisa membanggakan orang tua xixixi dan juga untuk memiliki teman yang sangat banyak
+            <p>Nama Saya Ryandi Sugiarto Jati biasa dipanggil dengan nama Ryan, Siswa SMA yang mempunyai Cukup Potensi dibidang Pemograman. Saya juga memiliki potensi yang cukup di bidang olahraga yaitu badminton. Saya juga memiliki cita cita yaitu untuk menjadi TNI Angkatan Udara (Semoga aja gak kesaing sama orang dalam😅) tentunya tidak lupa ingin melihat orang tua saya bangga xixixi. 
                 <br> <br>
                 
             </p>
@@ -113,10 +113,10 @@
 
                 <div>
                     <br><br> HOBI :
-                    <p>- Bersepeda</p>
-                    <p>- Badminton</p>
-                    <p>- Nonton anime</p>
-                    <p>- Main game</p>
+                    <p>- Mengenai hobi sebenarnya saya lebih menyukai hobi belajar yaitu</p>
+                    <p>- 1. Belajar Bermain Game</p>
+                    <p>- 2. Belajar Menonton Anime</p>
+                    <p>- 3. Belajar Menerima Kenyataan:(</p>
 
                 </div>
 
@@ -171,7 +171,7 @@
             </a>
         </div>
         <p>
-            Copyright 2022 | Ryandi sugiarto jati
+            Copyright 2022 | Ryandi Sugiarto Jati
         </p>
     </footer>
 
