--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <p>- Editing video</p>
                     <p>- Design grafis</p>
                     <p>- Ngoding</p>
-                    <p>- Menghiburmu dikala kamu bersedih cieeelah😜
+                    <p>- Menghiburmu dikala kamu bersedih cieeelah😜</p>
                     
                 </div>
 
