--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <p>- Editing video</p>
                     <p>- Design grafis</p>
                     <p>- Ngoding</p>
-                    <p>- Menghiburmu dikala kamu bersedih cieeelah😜</p>
+                    <p>- Menghiburmu dikala kamu sedih cieeelah😜</p>
                     
                 </div>
 
@@ -113,7 +113,7 @@
                     <br><br> HOBI :
                     <p>- Mengenai hobi sebenarnya saya lebih menyukai hobi belajar yaitu</p>
                     <p>- 1. Belajar Bermain Game</p>
-                    <p>- 2. Belajar Menonton Anime</p>
+                    <p>- 2. Belajar Nonton Anime</p>
                     <p>- 3. Belajar Menerima Kenyataan:(</p>
 
                 </div>
